refactor md files and apply redesign

--- a/src/content/campaigns/esp-2025-q1.md
+++ b/src/content/campaigns/esp-2025-q1.md
@@ -2,27 +2,33 @@
 id: '7'
 slug: esp-2025-q1
 name: EF ESP Open Grants
-tagline: Ethereum Foundation ongoing support
-heroImage: /images/campaigns/esp.svg
-status: active
-startDate: '2024-01-01'
-endDate: '2025-12-31'
-organizer: Ethereum Foundation
-mechanism: direct-grants
-fundingPool: Rolling
-applicationUrl: https://esp.ethereum.foundation/applicants
-eligibility:
-  - Benefits Ethereum ecosystem
-  - Open source preferred
-  - Clear milestones and deliverables
-  - Technical or community focus
-isFeatured: false
+shortDescription: Ethereum Foundation ongoing support
+banner: /images/campaigns/esp.svg
 tags:
   - ethereum foundation
   - ESP
   - grants
   - rolling
 lastUpdated: '2024-12-25'
+relatedMechanisms:
+  - direct-grants
+relatedApps:
+  - ethereum-foundation
 ---
+
+**Status:** Active
+**Start Date:** January 1, 2024
+**End Date:** December 31, 2025
+**Organizer:** Ethereum Foundation
+**Mechanism:** Direct Grants
+**Funding Pool:** Rolling
+**Application URL:** https://esp.ethereum.foundation/applicants
+**Featured:** No
+
+**Eligibility:**
+- Benefits Ethereum ecosystem
+- Open source preferred
+- Clear milestones and deliverables
+- Technical or community focus
 
 The Ethereum Foundation Ecosystem Support Program accepts rolling applications for grants supporting Ethereum infrastructure, research, and community. ESP funded 105 projects totaling ~$3M in 2024.
