--- a/src/content/campaigns/gg23.md
+++ b/src/content/campaigns/gg23.md
@@ -2,30 +2,8 @@
 id: '1'
 slug: gg23
 name: Gitcoin Grants 23
-tagline: Funding public goods through quadratic funding
-heroImage: /images/campaigns/gg23.svg
-status: completed
-startDate: '2024-12-03'
-endDate: '2024-12-17'
-organizer: Gitcoin
-mechanism: quadratic-funding
-matchingPool: $1.2M+
-applicationUrl: https://grants.gitcoin.co
-eligibility:
-  - Open source projects
-  - Public goods focus
-  - Active development
-  - Community engagement
-isFeatured: true
-featuredOrder: 1
-results:
-  projectsFunded: 235
-  totalDistributed: $1.2M+
-  uniqueDonors: 12000
-  highlights:
-    - Web3 OSS round featured major infrastructure projects
-    - Strong participation in Developer Tooling category
-    - Community rounds expanded reach
+shortDescription: Funding public goods through quadratic funding
+banner: /images/campaigns/gg23.svg
 tags:
   - gitcoin
   - quadratic funding
@@ -33,6 +11,34 @@ tags:
   - public goods
   - GG23
 lastUpdated: '2024-12-25'
+relatedMechanisms:
+  - quadratic-funding
+relatedApps:
+  - gitcoin-grants-stack
 ---
+
+**Status:** Completed
+**Start Date:** December 3, 2024
+**End Date:** December 17, 2024
+**Organizer:** Gitcoin
+**Mechanism:** Quadratic Funding
+**Matching Pool:** $1.2M+
+**Application URL:** https://grants.gitcoin.co
+**Featured:** Yes (Order: 1)
+
+**Eligibility:**
+- Open source projects
+- Public goods focus
+- Active development
+- Community engagement
+
+**Results:**
+- **Projects Funded:** 235
+- **Total Distributed:** $1.2M+
+- **Unique Donors:** 12,000
+- **Highlights:**
+  - Web3 OSS round featured major infrastructure projects
+  - Strong participation in Developer Tooling category
+  - Community rounds expanded reach
 
 GG23 ran in December 2024, bringing together communities across the Ethereum ecosystem to fund public goods through quadratic funding. The round distributed over $1.2M across 235+ projects in core rounds including Web3 OSS, Developer Tooling, and dApps & Apps.
