v1 wip: add chat, finish homepage

--- a/src/content/campaigns/gg23.md
+++ b/src/content/campaigns/gg23.md
@@ -10,6 +10,11 @@ tags:
   - grants
   - public goods
   - GG23
+externalUrl: https://grants.gitcoin.co
+matchingPoolUsd: '$1.2M+'
+projectsCount: '235'
+startDate: '2024-12-03'
+endDate: '2024-12-17'
 lastUpdated: '2024-12-25'
 relatedMechanisms:
   - quadratic-funding
