--- a/src/content/campaigns/esp-2025-q1.md
+++ b/src/content/campaigns/esp-2025-q1.md
@@ -9,6 +9,12 @@ tags:
   - ESP
   - grants
   - rolling
+externalUrl: https://esp.ethereum.foundation/applicants
+matchingPoolUsd: '~$3M (rolling)'
+projectsCount: '105'
+startDate: '2024-01-01'
+endDate: '2025-12-31'
+featured: true
 lastUpdated: '2024-12-25'
 relatedMechanisms:
   - direct-grants
